# obsidian-self-hosted-infra

./: .env.example  .gitignore  README.md  cli.py  docker-compose.yml  local.ini  main.py  manage.sh  pyproject.toml  setup.sh  update.sh
configs/: .env.example  client_secrets.example.json  local.ini.example
scripts/: auth.py  backup.py  config.py  init_db.py  logger.py
src/: auth.py  backup.py  bot.py  config.py  daemon.py  init_db.py  notifier.py  restore.py  usecases.py
src/clients/: bot.py
src/services/: usecases.py
